2013-01-08  Noel Gordon  <noel.gordon@gmail.com>

        [chromium] Unreviewed gardening. jquery/event.html timeouts in release and debug.

        * platform/chromium/TestExpectations: 

2013-01-08  Kent Tamura  <tkent@chromium.org>

        REGRESSION(r135836): Invalid user input for input[type=number] should be cleared by input.value=""
        https://bugs.webkit.org/show_bug.cgi?id=106284

        Reviewed by Hajime Morita.

        * fast/forms/number/number-validity-badinput.html:
        Add a test case.
        * fast/forms/number/number-validity-badinput-expected.txt:

2013-01-08  Nate Chapin  <japhet@chromium.org>

        REGRESSION(r138222?): [Mac WK1] http/tests/appcache/main-resource-redirect.html asserts in WebFrameLoaderClient::dispatchDidFinishLoading
        https://bugs.webkit.org/show_bug.cgi?id=106123

        Reviewed by Alexey Proskuryakov.

        * platform/mac-wk2/TestExpectations:
        * platform/mac/TestExpectations: main-resource-redirect.html is no longer crashing.

2013-01-08  Martin Robinson  <mrobinson@igalia.com>

        [EFL] [WK2] Some authentication tests fail in WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=106407

        * platform/efl-wk2/TestExpectations: Skip some tests failing for EFL
        on WebKit2.

2013-01-08  Martin Robinson  <mrobinson@igalia.com>

        [Mac] Authentication tests fail even after r139140
        https://bugs.webkit.org/show_bug.cgi?id=106405

        * platform/mac-wk2/TestExpectations: Skip authentication tests that are still
        failing in WebKit2 on Mac.

2013-01-08  Julien Chaffraix  <jchaffraix@webkit.org>

        Layout Test fast/css-grid-layout/grid-columns-rows-get-set-multiple.html, grid-columns-rows-get-set.html is failing
        https://bugs.webkit.org/show_bug.cgi?id=104090

        Unreviewed gardening.

        * platform/chromium/TestExpectations:
        In r139025, the not-totally-OK call to GridTrackSize::length() was removed and thus the